<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLayout"
        style="@style/Theme.KeepLinks.TextInputLayout.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textCapWords"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/linkLayout"
        style="@style/Theme.KeepLinks.TextInputLayout.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_link"
        android:layout_below="@id/nameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/link"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textUri"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/categoryLayout"
        style="@style/Theme.KeepLinks.TextInputLayout.Drop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_category"
        android:layout_below="@id/linkLayout">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textAutoComplete"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateLayout"
        style="@style/Theme.KeepLinks.TextInputLayout.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_saved_date"
        android:layout_below="@id/categoryLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="datetime"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/noteLayout"
        style="@style/Theme.KeepLinks.TextInputLayout.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_note"
        android:layout_below="@id/dateLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:minHeight="80dp"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/noteLayout"
        android:layout_marginEnd="8dp"
        android:layout_toStartOf="@+id/btn_add"
        android:text="@string/btn_cancel"
        android:textAllCaps="false" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/noteLayout"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:layout_alignParentEnd="true"
        android:text="@string/btn_add"
        android:textAllCaps="false" />
    <!--<com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLayout"
        style="@style/Theme.KeepLinks.TextInputLayout.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Link Name"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/linkLayout"
        style="@style/Theme.KeepLinks.TextInputLayout.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Link"
        app:layout_constraintTop_toBottomOf="@id/nameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/link"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/categoryLayout"
        style="@style/Theme.KeepLinks.TextInputLayout.Drop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="category"
        app:layout_constraintTop_toBottomOf="@id/linkLayout">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateLayout"
        style="@style/Theme.KeepLinks.TextInputLayout.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Date"
        app:layout_constraintTop_toBottomOf="@id/categoryLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/noteLayout"
        style="@style/Theme.KeepLinks.TextInputLayout.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Note"
        app:layout_constraintTop_toBottomOf="@id/dateLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:minHeight="80dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="Cancel"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@id/btn_add"
        app:layout_constraintEnd_toStartOf="@id/btn_add" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="Add"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/noteLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />-->
</RelativeLayout>